* Fix featured image being used in post overflowing content area

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Shades
 Theme URI: http://buynowshop.com/themes/shades/
 Description: A simple clean theme framework to work from, designed ideally for light colored backgrounds and easily adapted to darker layouts. Now with Threaded Comments and sticky post support!<em>Please read the included changelog.txt file for the latest change details.</em> The child theme Shades of Darkness is no longer included but is available for download at the theme homepage: http://buynowshop.com/themes/shades/.
-Version: 2.1
+Version: 2.1.1
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
 Tags: black, white, silver, red, light, two-columns, right-sidebar, fixed-width, sticky-post, threaded-comments, translation-ready, custom-menu, custom-background
@@ -685,6 +685,10 @@ table#wp-calendar tfoot tr td#next { text-align: right; }
     height: auto;
     max-width: 620px;
     /* =$content_width - borders - wp-caption padding */
+}
+
+img.size-full {
+    display: inline-block;
 }
 
 .wp-caption { max-width: 628px; /* =$content_width - borders */ }
